# multiagent-navigation

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  justfile  pyproject.toml
.claude/rules/: code-style.md
.github/: dependabot.yml
.github/workflows/: claude-code-review.yaml  claude.yaml  report.yml
configs/: config.yaml
configs/animate/: default.yaml
configs/env/: default.yaml
configs/model/: default.yaml
configs/train/: default.yaml
docs/: architecture.md
model/: TD3_simpleEnv_actor.pth  TD3_simpleEnv_critic.pth  epoch-142_metrics.json
report/: main.tex
report/assets/: TD3_simpleEnv.json  TD3_simpleEnv_4robots.json  eval_stats.json  trajectory.json  trajectory_success.json
report/scripts/: eval_policy.py  make_figures.py  make_gif.py  run_experiment.py
src/multiagent_navigation/: __init__.py  agent.py  config_schema.py  environment.py  lib.py  replay_buffer.py  run.py  viz.py
tests/: conftest.py  test_agent.py  test_api_stability.py  test_config_sync.py  test_environment.py  test_lib.py  test_properties.py  test_stage2.py  test_viz.py
tests/tools/: test_check_banners.py  test_check_device.py  test_check_imports.py  test_flagged_mutants.py
tools/pre_commit/: check_banners.py  check_device.py  check_imports.py
